@@ -1302,6 +1302,9 @@ gtk_file_chooser_button_get_title
 gtk_file_chooser_button_set_title
 gtk_file_chooser_button_get_width_chars
 gtk_file_chooser_button_set_width_chars
+gtk_file_chooser_button_get_focus_on_click
+gtk_file_chooser_button_set_focus_on_click
+
 <SUBSECTION Standard>
 GTK_FILE_CHOOSER_BUTTON
 GTK_IS_FILE_CHOOSER_BUTTON
