@@ -1311,6 +1311,8 @@ gtk_file_chooser_button_new_with_backend
 gtk_file_chooser_button_new_with_dialog
 gtk_file_chooser_button_set_title
 gtk_file_chooser_button_set_width_chars
+gtk_file_chooser_button_get_focus_on_click
+gtk_file_chooser_button_set_focus_on_click
 #endif
 #endif
 
