@@ -1,3 +1,10 @@
+2005-11-07  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtk.symbols: 
+	* gtk/gtkfilechooserbutton.h: 
+	* gtk/gtkfilechooserbutton.c: Add a focus-on-click property
+	with setter and getter.  (#318945, Christian Persch)
+	
 Mon Nov  7 16:15:16 2005  Tim Janik  <timj@imendio.com>
 
 	* configure.in: fixed missing $X_CFLAGS setup in case x11.pc is present.
